<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <TextView
        android:id="@+id/plantation_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/plantation_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textStyle="bold"
        android:textSize="12sp"/>
    <LinearLayout
        android:id="@+id/linear_layout_plantation_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@id/plantation_date"
        app:layout_constraintTop_toBottomOf="@id/plantation_date">
        <TextView
            android:id="@+id/plantation_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/plantacao_1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_weight="1"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:src="@drawable/ic_baseline_arrow_forward_ios_24"
            android:layout_weight="10"/>
    </LinearLayout>
    <TextView
        android:id="@+id/plantation_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/plantation_size"
        app:layout_constraintStart_toStartOf="@id/linear_layout_plantation_name"
        app:layout_constraintTop_toBottomOf="@id/linear_layout_plantation_name"/>

</androidx.constraintlayout.widget.ConstraintLayout>