<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/component_spacing"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_plantation_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_edit_text_plantation_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_input_edit_text_hint_plantation_name"></com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/spinner_plant_type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_input_layout_plantation_name"
        android:layout_marginTop="@dimen/component_spacing"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:spinnerMode="dialog">
    </Spinner>

    <!--
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_plant_type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_input_layout_plantation_name"
        android:layout_marginTop="@dimen/component_spacing"
        android:layout_width="0dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_edit_text_plant_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_input_edit_text_hint_plant_type"
            android:textColorHint="#616161"></com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>
    -->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_plantation_width"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner_plant_type"
        android:layout_marginTop="@dimen/component_spacing"
        android:layout_width="0dp"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_edit_text_plantation_width"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_input_edit_text_hint_plantation_width">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_plantation_height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_input_layout_plantation_width"
        android:layout_marginTop="@dimen/component_spacing"
        android:layout_width="0dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_edit_text_plantation_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_input_edit_text_hint_plantation_height"
            android:textColorHint="#616161"></com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_plantation_location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_location"
        app:layout_constraintTop_toBottomOf="@id/text_input_layout_plantation_height"
        android:layout_marginTop="@dimen/component_spacing"
        android:layout_width="0dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_edit_text_plantation_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_input_edit_text_hint_plantation_location"
            android:textColorHint="#616161"></com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_location"
        app:layout_constraintStart_toEndOf="@+id/text_input_layout_plantation_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_input_layout_plantation_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/component_spacing"
        android:layout_marginTop="@dimen/component_spacing"
        android:background="@android:color/transparent"
        android:drawableEnd="@drawable/ic_baseline_location_on_24"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="50dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/add_plantation"
        android:src="@drawable/ic_baseline_done_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>